--- a/src/skin.html
+++ b/src/skin.html
@@ -23,13 +23,13 @@
     href="[##_response_rss_url_##]" />
 
   <!-- CSS -->
-  <link rel="stylesheet" media="screen" type="text/css" href="./style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <!-- 코드 하이라이트-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism.css" rel="stylesheet" />
+  <link rel="stylesheet" media="screen" type="text/css" href="./style.css" />
 
   <!--[if lt IE 9]>
 	<script src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js"></script>
@@ -301,7 +301,7 @@
           <s_paging>
             <div class="mb-3 p-3">
               <nav class="mt-3">
-                <ul class="pagination pagination-sm justify-content-center">
+                <ul class="pagination pagination-sm justify-content-between justify-content-sm-center">
                   <li class="page-item [##_no_more_prev_##] d-block d-sm-none">
                     <a class="page-link" [##_prev_page_##] tabindex="-1">
                       <span aria-hidden="true">&laquo;이전</span>
