--- a/src/skin.html
+++ b/src/skin.html
@@ -355,7 +355,7 @@
           <nav>
             <div class="card mt-3">
               <div class="card-header">
-                <i class="fas fa-folder-open"></i>&nbsp;Category
+                <i class="fas fa-folder-open"></i>&nbsp;Categories
               </div>
               <div class="list-group">
               </div>
